[gd_scene load_steps=4 format=3 uid="uid://61t6mlbx6hae"]

[ext_resource type="Script" path="res://scripts/autoload/CameraManager.gd" id="1_rswln"]
[ext_resource type="PackedScene" uid="uid://bqyxmd3fk8d0a" path="res://resources/game_camera.tscn" id="2_00u05"]
[ext_resource type="PackedScene" uid="uid://goangsqw6m7j" path="res://scenes/ecs/parent/frame_buffer.tscn" id="3_nbo2r"]

[node name="CameraManager" type="Node"]
script = ExtResource("1_rswln")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0.122788, 0.696364, 0, 0.984808, -0.173648, -0.707107, 0.122788, 0.696364, 0, 0, 0)

[node name="GameCamera" parent="CameraPivot" instance=ExtResource("2_00u05")]
far = 230.0

[node name="FrameBuffer" parent="CameraPivot" node_paths=PackedStringArray("_target_viewport") instance=ExtResource("3_nbo2r")]
layer = -1
follow_viewport_enabled = true
_target_viewport = NodePath("../FrameBufferViewport")
_buffer_frames = 12
_buffer_frame_per_frames = 15
_start_opacity = 0.2
_opacity_fade_per_second = 0.3
_linger_duration = 0.2

[node name="FrameBufferViewport" type="SubViewport" parent="CameraPivot"]
transparent_bg = true
canvas_cull_mask = 4293918720
size = Vector2i(1366, 768)
render_target_update_mode = 4

[node name="FrameBufferPivot" type="Node3D" parent="CameraPivot/FrameBufferViewport"]
top_level = true

[node name="FrameBufferCamera" parent="CameraPivot/FrameBufferViewport/FrameBufferPivot" instance=ExtResource("2_00u05")]
transform = Transform3D(0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573576, -0.707107, -0.40558, 0.579228, 61.4364, 60.837, 61.4364)
cull_mask = 2048
far = 230.0
